--- a/.github/workflows/Large Workflow100.yml
+++ b/.github/workflows/Large Workflow100.yml
@@ -621,7 +621,7 @@ jobs:
       - name: Step 2
         run: 'echo "Job 2, Stage 2"'
 
-  StageRandom2!@&*():
+  StageRandom_-:
     runs-on: ubuntu-latest
     needs: Stage61
     steps:
