--- a/.github/workflows/workflow-1.yml
+++ b/.github/workflows/workflow-1.yml
@@ -3,9 +3,11 @@
 name: CICD GitHub workflow
 
 on:
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
+  schedule:
+    - cron: '*/1 * * * *'
 
 
 jobs:
