--- a/.github/workflows/workflow-1.yml
+++ b/.github/workflows/workflow-1.yml
@@ -192,7 +192,7 @@ jobs:
       name: 'ServiceNow DevOps Change'
       steps:
         - name: ServiceNow Change
-          uses: ServiceNow/servicenow-devops-change@v4.0.0
+          uses: ServiceNow/servicenow-devops-change@dev
           with:
             # Devops Integration Token
             devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
