--- a/.github/workflows/workflow-1.yml
+++ b/.github/workflows/workflow-1.yml
@@ -28,34 +28,34 @@ jobs:
     - name: Build with Maven
       run: mvn clean compile
 
-  # test:
-  #   name: 'Test'
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Checkout
-  #     uses: actions/checkout@v4.0.0
+  test:
+    name: 'Test'
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4.0.0
         
-  #   - name: Run Tests with Maven
-  #     run: mvn -B test --file pom.xml
+    - name: Run Tests with Maven
+      run: mvn -B test --file pom.xml
 
-  #   - name: ServiceNow DevOps Unit Test Results
-  #   # You may pin to the exact commit or the version.
-  #     uses: ServiceNow/servicenow-devops-test-report@main
-  #     with:
-  #         # Devops Integration Token
-  #         devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
-  #         # ServiceNow Instance Name
-  #         instance-url: ${{ secrets.SN_INSTANCE_URL }}
-  #         # Orchestration Tool Id
-  #         tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-  #         # Job Name
-  #         job-name: 'Test' # Should be same name as declared in 'name' clause of the current Stage
-  #         # Github Context
-  #         context-github: ${{ toJSON(github) }}
-  #         # JUnit xml report file name with path
-  #         xml-report-filename: target/surefire-reports/testng-results.xml # if only JUnit tests, use target/surefire-reports/testng-results.xml
-  #                                                                         # if both JUnit & TestNG tests, use target/surefire-reports/testng-junit-results/testng-results.xml
+    - name: ServiceNow DevOps Unit Test Results
+    # You may pin to the exact commit or the version.
+      uses: ServiceNow/servicenow-devops-test-report@main
+      with:
+          # Devops Integration Token
+          devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
+          # ServiceNow Instance Name
+          instance-url: ${{ secrets.SN_INSTANCE_URL }}
+          # Orchestration Tool Id
+          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+          # Job Name
+          job-name: 'Test' # Should be same name as declared in 'name' clause of the current Stage
+          # Github Context
+          context-github: ${{ toJSON(github) }}
+          # JUnit xml report file name with path
+          xml-report-filename: target/surefire-reports/testng-results.xml # if only JUnit tests, use target/surefire-reports/testng-results.xml
+                                                                          # if both JUnit & TestNG tests, use target/surefire-reports/testng-junit-results/testng-results.xml
 
   registerArtifact:
     name: 'Register Artifact'
@@ -192,7 +192,7 @@ jobs:
       name: 'ServiceNow DevOps Change'
       steps:
         - name: ServiceNow Change
-          uses: ServiceNow/servicenow-devops-change@dev
+          uses: ServiceNow/servicenow-devops-change@main
           with:
             # Devops Integration Token
             devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
