--- a/.github/workflows/Large Workflow100.yml
+++ b/.github/workflows/Large Workflow100.yml
@@ -1,8 +1,8 @@
 name: Large Workflow
-'on':
-  push:
-    branches:
-      - main
+# 'on':
+#   push:
+#     branches:
+#       - main
 jobs:
  
   build:
