--- a/.github/workflows/workflow-1.yml
+++ b/.github/workflows/workflow-1.yml
@@ -1,211 +1,94 @@
-# This workflow uses ServiceNow custom actions that are certified by ServiceNow.
-
 name: CICD GitHub workflow BTD
-
-# on:
-  # push:
-  #   branches:
-  #     - main
-  # schedule:
-  #   - cron: '*/1 * * * *'
-on: 
-  workflow_dispatch:
-
-
+'on':
+  workflow_dispatch: null
 jobs:
   build:
-    name: 'Build'
+    name: Build
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn clean compile
-
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: temurin
+          cache: maven
+      - name: Build with Maven
+        run: mvn clean compile
   test:
-    name: 'Test'
+    name: Test
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4.0.0
-        
-    - name: Run Tests with Maven
-      run: mvn -B test --file pom.xml
-
-    - name: ServiceNow DevOps Unit Test Results
-    # You may pin to the exact commit or the version.
-      uses: ServiceNow/servicenow-devops-test-report@main
-      with:
-          # Devops Integration Token
-          devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
-          # ServiceNow Instance Name
-          instance-url: ${{ secrets.SN_INSTANCE_URL }}
-          # Orchestration Tool Id
-          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-          # Job Name
-          job-name: 'Test' # Should be same name as declared in 'name' clause of the current Stage
-          # Github Context
-          context-github: ${{ toJSON(github) }}
-          # JUnit xml report file name with path
-          xml-report-filename: target/surefire-reports/testng-results.xml # if only JUnit tests, use target/surefire-reports/testng-results.xml
-                                                                          # if both JUnit & TestNG tests, use target/surefire-reports/testng-junit-results/testng-results.xml
-
+      - name: Checkout
+        uses: actions/checkout@v4.0.0
+      - name: Run Tests with Maven
+        run: mvn -B test --file pom.xml
+      - name: ServiceNow DevOps Unit Test Results
+        uses: ServiceNow/servicenow-devops-test-report@main
+        with:
+          devops-integration-token: '${{ secrets.SN_DEVOPS_TOKEN }}'
+          instance-url: '${{ secrets.SN_INSTANCE_URL }}'
+          tool-id: '${{ secrets.SN_ORCHESTRATION_TOOL_ID }}'
+          job-name: Test
+          context-github: '${{ toJSON(github) }}'
+          xml-report-filename: target/surefire-reports/testng-results.xml
   registerArtifact:
-    name: 'Register Artifact'
+    name: Register Artifact
     needs: test
     runs-on: ubuntu-latest
     steps:
-    - name: ServiceNow DevOps Register Artifact
-    # You may pin to the exact commit or the version.          
-      uses: ServiceNow/servicenow-devops-register-artifact@main
-      with:
-          # Devops Integration Token
-          devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
-          # ServiceNow Instance URL
-          instance-url: ${{ secrets.SN_INSTANCE_URL }}
-          # Orchestration Tool Id
-          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-          # Display Name of the Job
-          job-name: 'Register Artifact'
-          # Github Context
-          context-github: ${{ toJSON(github) }}
-          # List of Artifacts to be registered
-          artifacts: '[
-             {
-                  "name": "app-devops.jar",
-                  "version": "1.${{ github.run_number }}",
-                  "semanticVersion": "1.${{ github.run_number }}.0",
-                  "repositoryName": "${{ github.repository }}"
-              }
-          ]'
-
-  
-
-  # securityScan:
-  #   name: 'Security Scan'
-  #  # needs: sonarScan
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Checkout
-  #     uses: actions/checkout@v4.0.0
-
-  #   - name: ServiceNow DevOps Security Results
-  #     uses: ServiceNow/servicenow-devops-security-result@main
-  #     with:
-  #         # Devops Integration Token
-  #         devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
-  #         instance-url: ${{ secrets.SN_INSTANCE_URL }}
-  #         tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-  #         context-github: ${{ toJSON(github) }}
-  #         job-name: 'Security Scan'
-  #         security-result-attributes: '{ "scanner": "Veracode", "applicationName": "10kflaws-72", "securityToolId": "5d8cbe8ec38a31108a432e0ad001315e" }'
-
+      - name: ServiceNow DevOps Register Artifact
+        uses: ServiceNow/servicenow-devops-register-artifact@main
+        with:
+          devops-integration-token: '${{ secrets.SN_DEVOPS_TOKEN }}'
+          instance-url: '${{ secrets.SN_INSTANCE_URL }}'
+          tool-id: '${{ secrets.SN_ORCHESTRATION_TOOL_ID }}'
+          job-name: Register Artifact
+          context-github: '${{ toJSON(github) }}'
+          artifacts: >-
+            [ {      "name": "app-devops.jar", "version": "1.${{
+            github.run_number }}", "semanticVersion": "1.${{ github.run_number
+            }}.0", "repositoryName": "${{ github.repository }}" } ]
   registerPackage:
-    name: 'registerArtifact'
+    name: registerArtifact
     needs: Register Artifact
     runs-on: ubuntu-latest
     steps:
-    - name: ServiceNow DevOps Register Package
-    # You may pin to the exact commit or the version.           
-      uses: ServiceNow/servicenow-devops-register-package@main
-      with:
-          # Devops Integration Token
-          devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
-          # ServiceNow Instance URL
-          instance-url: ${{ secrets.SN_INSTANCE_URL }}
-          # Orchestration Tool Id of the tool created in ServiceNow
-          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-          # Github Context
-          context-github: ${{ toJSON(github) }}
-          # List of Artifacts in JSON format
-          artifacts: '[
-              {
-                  "name": "app-devops.jar",
-                  "version": "1.${{ github.run_number }}",
-                  "semanticVersion": "1.${{ github.run_number }}.0",
-                  "repositoryName": "${{ github.repository }}"
-              }
-          ]'
-          # Name of the Package that contains list of artifacts
-          package-name: 'app-devops-change-velocity.war'
-          # Display Name of Job
-          job-name: 'Register Package'
-
-  # change:
-  #   name: 'Change'
-  #   needs: registerPackage
-  #   runs-on: ubuntu-latest
-  #   steps:     
-  #   - name: ServiceNow DevOps Change Automation
-  #   # You may pin to the exact commit or the version.            
-  #     uses: ServiceNow/servicenow-devops-change@main
-  #     with:
-  #         # ServiceNow Instance URL
-  #         instance-url: ${{ secrets.SN_INSTANCE_URL }}
-  #         # Devops Integration Token
-  #         devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
-  #         # Orchestration Tool Id
-  #         tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-  #         # Display Name of the Job
-  #         job-name: 'Change'
-  #         # Github Context
-  #         context-github: ${{ toJSON(github) }}
-  #         change-request: '{
-  #           "attributes": {
-  #             "requested_by": {
-  #               "name": "DevOps System"
-  #             },
-  #             "assignment_group": {
-  #             "name": "Change Management"
-  #             },
-  #             "priority": "2",
-  #             "comments": "This is a sample pipeline script to be added in your change step",
-  #             "work_notes": "Update this to work_notes",
-  #             "start_date": "2023-09-07 11:59:59",
-  #             "end_date": "2023-09-09 11:59:59"
-  #           }
-  #         }'
-          
-  # uncomment below lines of code to create change request using deployment gates, indent code if necessary
-  #         deployment-gate: '{"environment":"prod", "jobId":"deploy", "jobName":"Deploy"}'
-
+      - name: ServiceNow DevOps Register Package
+        uses: ServiceNow/servicenow-devops-register-package@main
+        with:
+          devops-integration-token: '${{ secrets.SN_DEVOPS_TOKEN }}'
+          instance-url: '${{ secrets.SN_INSTANCE_URL }}'
+          tool-id: '${{ secrets.SN_ORCHESTRATION_TOOL_ID }}'
+          context-github: '${{ toJSON(github) }}'
+          artifacts: >-
+            [ { "name": "app-devops.jar", "version": "1.${{ github.run_number
+            }}", "semanticVersion": "1.${{ github.run_number }}.0",
+            "repositoryName": "${{ github.repository }}" } ]
+          package-name: app-devops-change-velocity.war
+          job-name: Register Package
   deploy:
-    name: 'Deploy'
+    name: Deploy
     needs: registerPackage
     runs-on: ubuntu-latest
     steps:
-    - name: Run deployment scripts
-      run: echo 'Deployment step in progress...'
-
+      - name: Run deployment scripts
+        run: echo 'Deployment step in progress...'
   ServiceNowDevOpsChange:
-  # jobs that must complete successfully before this job will run
-      needs: build
-      # type of machine to run the job on
-      runs-on: ubuntu-latest
-      name: 'ServiceNow DevOps Change'
-      steps:
-        - name: ServiceNow Change
-          uses: ServiceNow/servicenow-devops-change@scratch/node20update
-          with:
-            # Devops Integration Token
-            devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
-            # ServiceNow Instance URL
-            instance-url: ${{ secrets.SN_INSTANCE_URL }}
-            # Orchestration Tool Id
-            tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-            # GitHub Context
-            context-github: ${{ toJSON(github) }}
-            # Display Name of the Job
-            job-name: 'ServiceNow DevOps Change'
-            change-request: '{"setCloseCode":"true","attributes":{"short_description":"Automated Software Deployment","description":"Automated Software Deployment.","assignment_group":"a715cd759f2002002920bde8132e7018"}}'
-            # You can specify the requested_by attribute either with name or sys_id. Example: "requested_by":{"name": "Test User"} or "requested_by": "62826bf03710200044e0bfc8bcbe5df1"
-            # You can specify the assignment_group attribute either with name or sys_id. Example: "assignment_group":{"name": "Change Approval Team"} or "assignment_group": "5f721d93c0a8010e015533746de18bf9"
-            # start_date: This is the planned start date
-            # end_date: This is the planned end date
+    needs: build
+    runs-on: ubuntu-latest
+    name: ServiceNow DevOps Change
+    steps:
+      - name: ServiceNow Change
+        uses: ServiceNow/servicenow-devops-change@scratch/node20update
+        with:
+          devops-integration-token: '${{ secrets.SN_DEVOPS_TOKEN }}'
+          instance-url: '${{ secrets.SN_INSTANCE_URL }}'
+          tool-id: '${{ secrets.SN_ORCHESTRATION_TOOL_ID }}'
+          context-github: '${{ toJSON(github) }}'
+          job-name: ServiceNow DevOps Change
+          change-request: >-
+            {"setCloseCode":"true","attributes":{"short_description":"Automated
+            Software Deployment","description":"Automated Software
+            Deployment.","assignment_group":"a715cd759f2002002920bde8132e7018"}}
