--- a/.github/workflows/BTD workflow 1.yml
+++ b/.github/workflows/BTD workflow 1.yml
@@ -110,7 +110,7 @@ jobs:
     name: ServiceNow DevOps Change
     steps:
       - name: ServiceNow Change
-        uses: ServiceNow/servicenow-devops-change@scratch/node20update
+        uses: ServiceNow/servicenow-devops-change@main
         with:
           devops-integration-token: '${{ secrets.SN_DEVOPS_TOKEN }}'
           instance-url: '${{ secrets.SN_INSTANCE_URL }}'
