--- a/.github/workflows/BTD workflow 1.yml
+++ b/.github/workflows/BTD workflow 1.yml
@@ -51,7 +51,7 @@ jobs:
             github.run_number }}", "semanticVersion": "1.${{ github.run_number
             }}.0", "repositoryName": "${{ github.repository }}" } ]
   registerPackage:
-    name: registerArtifact
+    name: registerPackage
     needs: registerArtifact
     runs-on: ubuntu-latest
     steps:
@@ -69,37 +69,37 @@ jobs:
           package-name: app-devops-change-velocity.war
           job-name: Register Package
           
-  sonarScan:
-   name: 'Sonar Scan'
-   # if: ${{ github.ref != 'refs/heads/main' }}
-   needs: registerPackage
-   runs-on: ubuntu-latest
-   steps:
-   - name: Checkout
-     uses: actions/checkout@v5.1.0
-   - name: ServiceNow DevOps Sonar Scan Results
-   # You may pin to the exact commit or the version.     
-     uses: ServiceNow/servicenow-devops-sonar@v5.1.0
-     with:
-         # ServiceNow Instance URL
-         instance-url: ${{ secrets.SN_INSTANCE_URL }}
-         # Devops Integration Token
-         # devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
-         # devops-integration-user-password: '${{ secrets.SN_DEVOPS_PASSWORD }}'
-         devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
-         # Orchestration Tool Id
-         tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-         # Github Context
-         context-github: ${{ toJSON(github) }}
-         # Display Name of the Job
-         job-name: 'Sonar Scan'
-         # Sonar Host URL
-         sonar-host-url: ${{ secrets.SONAR_URL }}
-         # Sonar Project Key
-         sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
+  # sonarScan:
+  #  name: 'Sonar Scan'
+  #  # if: ${{ github.ref != 'refs/heads/main' }}
+  #  needs: registerPackage
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #  - name: Checkout
+  #    uses: actions/checkout@v5.1.0
+  #  - name: ServiceNow DevOps Sonar Scan Results
+  #  # You may pin to the exact commit or the version.     
+  #    uses: ServiceNow/servicenow-devops-sonar@v5.1.0
+  #    with:
+  #        # ServiceNow Instance URL
+  #        instance-url: ${{ secrets.SN_INSTANCE_URL }}
+  #        # Devops Integration Token
+  #        # devops-integration-user-name: '${{ secrets.SN_DEVOPS_USER }}'
+  #        # devops-integration-user-password: '${{ secrets.SN_DEVOPS_PASSWORD }}'
+  #        devops-integration-token: ${{ secrets.SN_DEVOPS_TOKEN }}
+  #        # Orchestration Tool Id
+  #        tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+  #        # Github Context
+  #        context-github: ${{ toJSON(github) }}
+  #        # Display Name of the Job
+  #        job-name: 'Sonar Scan'
+  #        # Sonar Host URL
+  #        sonar-host-url: ${{ secrets.SONAR_URL }}
+  #        # Sonar Project Key
+  #        sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
   deploy:
     name: Deploy
-    needs: sonarScan
+    needs: registerPackage
     runs-on: ubuntu-latest
     steps:
       - name: Run deployment scripts
